--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   e2e-test:
+    if: false
     strategy:
       matrix:
         node:
@@ -69,6 +70,65 @@ jobs:
       #     name: playwright-report
       #     path: playwright-report/
       #     retention-days: 30
+
+  e2e-test-macos:
+    strategy:
+      matrix:
+        node:
+          # - "20"
+          # - "22"
+          - "23"
+        browser:
+          - name: "Google Chrome Canary"
+            type: "chrome"
+            version: "canary"
+          # - name: "Chromium"
+          #   type: "chromium"
+          # - name: "Google Chrome"
+          #   type: "chrome"
+          # - name: "Google Chrome Beta"
+          #   type: "chrome-beta"
+          # - name: "Microsoft Edge"
+          #   type: "msedge"
+          # - name: "Microsoft Edge Beta"
+          #   type: "msedge-beta"
+          # - name: "Microsoft Edge Dev"
+          #   type: "msedge-dev"
+    env:
+      VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
+      VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
+      VITE_TEST_WHEP_ENDPOINT_URL: ${{ secrets.TEST_WHEP_ENDPOINT_URL }}
+      VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
+      VITE_TEST_API_URL: ${{ secrets.TEST_API_URL }}
+      VITE_TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
+    runs-on: ubuntu-24.04
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v4
+      - uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: ${{ matrix.browser.version }}
+        if: ${{ matrix.browser.type == 'chrome' }}
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      - run: pnpm --version
+      - run: pnpm install
+      - run: pnpm run build
+      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
+        env:
+          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
+          BROWSER_PATH: ${{ steps.setup-chrome.outputs.chrome-path }}
+      # - uses: actions/upload-artifact@v4
+      #   if: always()
+      #   with:
+      #     name: playwright-report
+      #     path: playwright-report/
+      #     retention-days: 30
+
 
   # slack_notify_succeeded:
   #   needs: [e2e-test]
