--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -80,8 +80,6 @@ jobs:
           - "23"
         browser:
           - name: "Google Chrome Canary"
-            type: "chrome"
-            version: "canary"
           # - name: "Chromium"
           #   type: "chromium"
           # - name: "Google Chrome"
@@ -105,10 +103,8 @@ jobs:
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
-      - uses: browser-actions/setup-chrome@v1
-        with:
-          chrome-version: ${{ matrix.browser.version }}
-        if: ${{ matrix.browser.type == 'chrome' }}
+      - uses: Homebrew/actions/setup-homebrew@master
+      - run: brew install --cask google-chrome-canary
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
@@ -121,7 +117,6 @@ jobs:
       - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
         env:
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
-          BROWSER_PATH: ${{ steps.setup-chrome.outputs.chrome-path }}
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
