--- a/.github/workflows/e2e-test-h265.yml
+++ b/.github/workflows/e2e-test-h265.yml
@@ -1,4 +1,4 @@
-name: e2e-test
+name: e2e-test-h265
 
 on:
   push:
@@ -14,80 +14,18 @@ on:
     - cron: "0 2 * * 1-5"
 
 jobs:
-  e2e-test:
-    if: false
-    strategy:
-      matrix:
-        node:
-          - "20"
-          - "22"
-          - "23"
-        browser:
-          - name: "Chromium"
-            type: "chromium"
-          - name: "Google Chrome"
-            type: "chrome"
-          - name: "Google Chrome Beta"
-            type: "chrome-beta"
-          - name: "Microsoft Edge"
-            type: "msedge"
-          - name: "Microsoft Edge Beta"
-            type: "msedge-beta"
-          - name: "Microsoft Edge Dev"
-            type: "msedge-dev"
-    env:
-      VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
-      VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
-      VITE_TEST_WHEP_ENDPOINT_URL: ${{ secrets.TEST_WHEP_ENDPOINT_URL }}
-      VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
-      VITE_TEST_API_URL: ${{ secrets.TEST_API_URL }}
-      VITE_TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
-    runs-on: ubuntu-24.04
-    timeout-minutes: 20
-    steps:
-      - uses: actions/checkout@v4
-      - uses: tailscale/github-action@v2
-        with:
-          oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-          oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-          tags: tag:ci
-      - uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node }}
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-      - run: pnpm --version
-      - run: pnpm install
-      - run: pnpm run build
-      - run: pnpm exec playwright install ${{ matrix.browser.type }} --with-deps
-      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
-        env:
-          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
-      # - uses: actions/upload-artifact@v4
-      #   if: always()
-      #   with:
-      #     name: playwright-report
-      #     path: playwright-report/
-      #     retention-days: 30
-
   # Chrome と Edge の Canary バージョンでのテスト
   # Playwright 経由では Canary バージョンのブラウザをインストールできない
   # Homebrew 経由でインストールしている
-  e2e-test-canary:
+  e2e-test-h265:
     strategy:
       matrix:
         node:
-          - "20"
-          - "22"
           - "23"
         browser:
           - name: "Google Chrome Canary"
             type: "google-chrome"
             version: canary
-          - name: "Microsoft Edge Canary"
-            type: "microsoft-edge"
-            version: canary
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
@@ -95,7 +33,9 @@ jobs:
       VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
       VITE_TEST_API_URL: ${{ secrets.TEST_API_URL }}
       VITE_TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
-    runs-on: macos-15
+    runs-on:
+      group: Self
+      labels: [self-hosted, self-hosted, macOS, ARM64, Apple-M2-Pro]
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
@@ -135,7 +75,7 @@ jobs:
   #         SLACK_ICON_EMOJI: ":star-struck:"
   #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
   slack_notify_failed:
-    needs: [e2e-test, e2e-test-canary]
+    needs: [e2e-test-h265]
     runs-on: ubuntu-24.04
     if: failure()
     steps:
