--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -21,6 +21,8 @@ jobs:
       matrix:
         # メンテナンスはおてて
         sdk_version: [
+          # canary リリースを含める
+          "2025.1.0-canary.3",
           "2024.2.2",
           "2024.1.2",
           "2023.2.0",
@@ -30,6 +32,12 @@ jobs:
           "2022.1.0",
           "2021.2.3",
           "2021.1.7",
+          "2020.6.2",
+          "2020.5.0",
+          "2020.4.2",
+          "2020.3.0",
+          "2020.2.0",
+          "2020.1.5",
         ]
         node: ["18", "20", "22", "23"]
         browser: 
