--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -31,8 +31,8 @@ jobs:
           "2022.2.0",
           "2022.1.0",
           "2021.2.3",
+          # 2020.1.7 以前は E2E テストが通らない
           "2021.1.7",
-          "2020.6.2",
         ]
         node: ["18", "20", "22", "23"]
         browser: 
