--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "watch": "vite build --watch",
     "e2e-dev": "vite --config e2e-tests/vite.config.mjs",
     "e2e-test": "pnpm build && playwright test --project='chromium'",
-    "all-e2e-test": "pnpm build && playwright test --project='chromium' --project='Google Chrome*' --project='Microsoft Edge*'",
+    "e2e-test-chrome": "pnpm build && playwright test --project='Google Chrome*'",
+    "e2e-test-edge": "pnpm build && playwright test --project='Microsoft Edge*'",
     "lint": "biome lint",
     "fmt": "biome format --write",
     "check": "tsc --noEmit",
