--- a/.github/workflows/e2e-test-h265.yml
+++ b/.github/workflows/e2e-test-h265.yml
@@ -17,7 +17,7 @@ jobs:
   # Chrome と Edge の Canary バージョンでのテスト
   # Playwright 経由では Canary バージョンのブラウザをインストールできない
   # Homebrew 経由でインストールしている
-  e2e-test-h265:
+  e2e-test-chrome-macos-h265:
     strategy:
       matrix:
         node:
@@ -29,6 +29,9 @@ jobs:
           - name: "Google Chrome Dev"
             type: "google-chrome"
             version: dev
+          - name: "Google Chrome Beta"
+            type: "google-chrome"
+            version: beta
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
@@ -63,6 +66,48 @@ jobs:
       #     path: playwright-report/
       #     retention-days: 30
 
+  # self-hosted なので Ubuntu のみ
+  e2e-test-chrome-intel-vpl-h265:
+    strategy:
+      matrix:
+        node:
+          - "20"
+        browser:
+          - name: "Google Chrome Beta"
+            type: "chrome-beta"
+    env:
+      VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
+      VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
+      VITE_TEST_WHEP_ENDPOINT_URL: ${{ secrets.TEST_WHEP_ENDPOINT_URL }}
+      VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
+      VITE_TEST_API_URL: ${{ secrets.TEST_API_URL }}
+      VITE_TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
+    runs-on:
+      group: Self
+      labels: [self-hosted, linux, x64, Intel-VPL]
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      - run: pnpm --version
+      - run: pnpm install
+      - run: pnpm run build
+      - run: pnpm exec playwright install ${{ matrix.browser.type }} --with-deps
+      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/h265.test.ts
+        env:
+          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
+      # - uses: actions/upload-artifact@v4
+      #   if: always()
+      #   with:
+      #     name: playwright-report
+      #     path: playwright-report/
+      #     retention-days: 30
+
 
   # slack_notify_succeeded:
   #   needs: [e2e-test]
@@ -78,7 +123,7 @@ jobs:
   #         SLACK_ICON_EMOJI: ":star-struck:"
   #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
   slack_notify_failed:
-    needs: [e2e-test-h265]
+    needs: [e2e-test-chrome-macos-h265, e2e-test-chrome-intel-vpl-h265]
     runs-on: ubuntu-24.04
     if: failure()
     steps:
