homebrew 利用してみる

--- a/.github/workflows/e2e-test-h265.yml
+++ b/.github/workflows/e2e-test-h265.yml
@@ -73,8 +73,15 @@ jobs:
         node:
           - "20"
         browser:
+          - name: "Google Chrome Canary"
+            type: "google-chrome"
+            version: canary
+          - name: "Google Chrome Dev"
+            type: "google-chrome"
+            version: dev
           - name: "Google Chrome Beta"
-            type: "chrome-beta"
+            type: "google-chrome"
+            version: beta
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
@@ -88,6 +95,9 @@ jobs:
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: Homebrew/actions/setup-homebrew@master
+      - run: brew install --cask ${{ matrix.browser.type}}@${{ matrix.browser.version }}
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
@@ -97,7 +107,6 @@ jobs:
       - run: pnpm --version
       - run: pnpm install
       - run: pnpm run build
-      - run: pnpm exec playwright install ${{ matrix.browser.type }}
       - run: pnpm exec playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/h265.test.ts
         env:
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
