--- a/.github/workflows/e2e-test-h265.yml
+++ b/.github/workflows/e2e-test-h265.yml
@@ -29,6 +29,9 @@ jobs:
           - name: "Google Chrome Dev"
             type: "google-chrome"
             version: dev
+          - name: "Google Chrome Beta"
+            type: "google-chrome"
+            version: beta
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
