--- a/.github/workflows/e2e-test-h265.yml
+++ b/.github/workflows/e2e-test-h265.yml
@@ -24,11 +24,13 @@ jobs:
           - "20"
         browser:
           - name: "Google Chrome Canary"
-            type: "google-chrome"
-            version: canary
+            type: "google-chrome@canary"
           - name: "Google Chrome Dev"
-            type: "google-chrome"
-            version: dev
+            type: "google-chrome@dev"
+          - name: "Google Chrome Beta"
+            type: "google-chrome@beta"
+          # - name: "Google Chrome"
+          #   type: "google-chrome"
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
@@ -43,7 +45,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: Homebrew/actions/setup-homebrew@master
-      - run: brew install --cask ${{ matrix.browser.type}}@${{ matrix.browser.version }}
+      - run: brew install --cask ${{ matrix.browser.type}}
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
