--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -56,6 +56,7 @@ jobs:
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: tag:ci
           version: latest
+          use-cache: 'true'
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
