--- a/.github/workflows/e2e-test-h265.yml
+++ b/.github/workflows/e2e-test-h265.yml
@@ -29,8 +29,8 @@ jobs:
             type: "google-chrome@dev"
           - name: "Google Chrome Beta"
             type: "google-chrome@beta"
-          # - name: "Google Chrome"
-          #   type: "google-chrome"
+          - name: "Google Chrome"
+            type: "google-chrome"
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_WHIP_ENDPOINT_URL: ${{ secrets.TEST_WHIP_ENDPOINT_URL }}
