--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,10 @@ jobs:
     strategy:
       matrix:
         node: ["20", "22", "24"]
-        typescript: ["5.1", "5.2", "5.3", "5.4", "5.5", "5.6", "5.7", "5.8", "next"]
+        # typescript: ["5.1", "5.2", "5.3", "5.4", "5.5", "5.6", "5.7", "5.8", "next"]
+        # next で type check が通らないので一時的にコメントアウトする
+        # https://github.com/microsoft/TypeScript/issues/61687
+        typescript: ["5.1", "5.2", "5.3", "5.4", "5.5", "5.6", "5.7", "5.8"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
