--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "jsdom": "26.1.0",
     "tslib": "2.8.1",
     "typedoc": "0.28.4",
-    "typescript": "5.8.3",
+    "typescript": "5.9.0-dev.20250511",
     "vite": "6.3.5",
     "vite-plugin-dts": "4.5.3",
     "vitest": "3.1.3"
