--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@types/node": "22.15.21",
     "jsdom": "26.1.0",
     "tslib": "2.8.1",
-    "typedoc": "0.28.4",
-    "typescript": "5.9.0-dev.20250511",
+    "typedoc": "0.28.5",
+    "typescript": "5.8.3",
     "vite": "6.3.5",
     "vite-plugin-dts": "4.5.4",
     "vitest": "3.1.4"
