--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -22,7 +22,7 @@ jobs:
         # メンテナンスはおてて
         sdk_version: [
           # canary リリースを含める
-          "2025.1.0-canary.4",
+          "2025.1.0",
           "2024.2.2",
           "2024.1.2",
           "2023.2.0",
@@ -34,6 +34,7 @@ jobs:
           # 2020.1.7 以前は E2E テストが通らない
           "2021.1.7",
         ]
+        # 18 は廃止されたが
         node: ["18", "20", "22", "24"]
         browser: 
             - name: "Google Chrome"
