--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "url": "https://discord.gg/shiguredo"
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@playwright/test": "1.53.0",
-    "@types/node": "24.0.1",
+    "@types/node": "24.0.3",
     "jsdom": "26.1.0",
     "tslib": "2.8.1",
     "typedoc": "0.28.5",
