--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "vite build",
     "watch": "vite build --watch",
-    "e2e-dev": "vite --config e2e-tests/vite.config.mjs",
+    "e2e-dev": "vite --config e2e-tests/vite.config.ts",
     "e2e-test": "pnpm build && playwright test --project='chromium'",
     "e2e-test-chrome": "pnpm build && playwright test --project='Google Chrome*'",
     "e2e-test-edge": "pnpm build && playwright test --project='Microsoft Edge*'",
