--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -6,10 +6,9 @@ on:
     branches:
       - develop
       - feature/*
-    paths-ignore:
-      - "**.md"
-      - "LICENSE"
-      - "NOTICE"
+    paths:
+      - .github/workflows/e2e-test.yml
+      - e2e-tests/**
   schedule:
     # UTC 時間で毎日 2:00 (JST で 11:00) に実行、月曜日から金曜日
     - cron: "0 2 * * 1-5"
@@ -17,11 +16,16 @@ on:
 jobs:
   e2e-test:
     strategy:
+      fail-fast: false
       matrix:
         node:
           - "20"
           - "22"
           - "24"
+        os:
+          - "ubuntu-24.04"
+          - "macos-15"
+          - "windows-2025"
         browser:
           - name: "Chromium"
             type: "chromium"
@@ -40,7 +44,7 @@ jobs:
       VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
       VITE_TEST_API_URL: ${{ secrets.TEST_API_URL }}
       VITE_TEST_SECRET_KEY: ${{ secrets.TEST_SECRET_KEY }}
-    runs-on: ubuntu-24.04
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
