--- a/.github/workflows/e2e-test-canary.yml
+++ b/.github/workflows/e2e-test-canary.yml
@@ -10,6 +10,7 @@ on:
       - develop
       - feature/*
     paths:
+      - playwright.config.ts
       - .github/workflows/e2e-test-canary.yml
       - e2e-tests/**
   schedule:
