--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -20,26 +20,26 @@ jobs:
       fail-fast: false
       matrix:
         node:
-          # - "20"
-          # - "22"
+          - "20"
+          - "22"
           - "24"
         os:
           - "ubuntu-24.04"
           - "macos-15"
           - "windows-2025"
         browser:
-          # - name: "Chromium"
-          #   type: "chromium"
-          # - name: "Google Chrome"
-          #   type: "chrome"
+          - name: "Chromium"
+            type: "chromium"
+          - name: "Google Chrome"
+            type: "chrome"
           - name: "Google Chrome Beta"
             type: "chrome-beta"
-          # - name: "Microsoft Edge"
-          #   type: "msedge"
-          # - name: "Microsoft Edge Beta"
-          #   type: "msedge-beta"
-          # - name: "Microsoft Edge Dev"
-          #   type: "msedge-dev"
+          - name: "Microsoft Edge"
+            type: "msedge"
+          - name: "Microsoft Edge Beta"
+            type: "msedge-beta"
+          - name: "Microsoft Edge Dev"
+            type: "msedge-dev"
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
@@ -66,7 +66,7 @@ jobs:
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm exec playwright install ${{ matrix.browser.type }} --with-deps
-      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/stereo_audio_sendrecv.test.ts --repeat-each=20
+      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
         env:
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
