--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -24,22 +24,22 @@ jobs:
           - "22"
           - "24"
         os:
-          - "ubuntu-24.04"
-          - "macos-15"
+          # - "ubuntu-24.04"
+          # - "macos-15"
           - "windows-2025"
         browser:
           - name: "Chromium"
             type: "chromium"
-          - name: "Google Chrome"
-            type: "chrome"
-          - name: "Google Chrome Beta"
-            type: "chrome-beta"
-          - name: "Microsoft Edge"
-            type: "msedge"
-          - name: "Microsoft Edge Beta"
-            type: "msedge-beta"
-          - name: "Microsoft Edge Dev"
-            type: "msedge-dev"
+          # - name: "Google Chrome"
+          #   type: "chrome"
+          # - name: "Google Chrome Beta"
+          #   type: "chrome-beta"
+          # - name: "Microsoft Edge"
+          #   type: "msedge"
+          # - name: "Microsoft Edge Beta"
+          #   type: "msedge-beta"
+          # - name: "Microsoft Edge Dev"
+          #   type: "msedge-dev"
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
       VITE_TEST_CHANNEL_ID_PREFIX: ${{ secrets.TEST_CHANNEL_ID_PREFIX }}
@@ -55,7 +55,7 @@ jobs:
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: tag:ci
           version: latest
-          use-cache: 'true'
+          use-cache: "true"
           hostname: gha-${{ github.run_id }}-${{ github.run_number }}
           timeout: 2m
           retry: 5
@@ -69,7 +69,7 @@ jobs:
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm exec playwright install ${{ matrix.browser.type }} --with-deps
-      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
+      - run: pnpm exec playwright test e2e-tests/tests/spotlight_sendonly_recvonly.test.ts --repeat-each=20 --project="${{ matrix.browser.name }}"
         env:
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
@@ -78,7 +78,6 @@ jobs:
       #     name: playwright-report
       #     path: playwright-report/
       #     retention-days: 30
-
 
   # slack_notify_succeeded:
   #   needs: [e2e-test]
