cron スケジュールを更新する

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -12,7 +12,9 @@ on:
       - e2e-tests/**
   schedule:
     # UTC 時間で毎日 2:00 (JST で 11:00) に実行、月曜日から金曜日
-    - cron: "0 2 * * 1-5"
+    # - cron: "0 2 * * 1-5"
+    # UTC 時間で平日 2-7 時 (JST で 11:00-16:00) に毎時実行
+    - cron: "0 2-7 * * 1-5"
 
 jobs:
   e2e-test:
