--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -22,9 +22,10 @@ jobs:
       fail-fast: false
       matrix:
         node:
-          - "20"
-          - "22"
+          - "25"
           - "24"
+          - "22"
+          - "20"
         os:
           - "ubuntu-24.04"
           - "macos-15"
@@ -57,7 +58,7 @@ jobs:
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: tag:ci
           version: latest
-          use-cache: 'true'
+          use-cache: "true"
           hostname: gha-${{ github.run_id }}-${{ github.run_number }}
           timeout: 2m
           retry: 5
@@ -80,7 +81,6 @@ jobs:
       #     name: playwright-report
       #     path: playwright-report/
       #     retention-days: 30
-
 
   # slack_notify_succeeded:
   #   needs: [e2e-test]
