--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,11 +12,21 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        node: ["20", "22", "24"]
-        # typescript: ["5.1", "5.2", "5.3", "5.4", "5.5", "5.6", "5.7", "5.8", "next"]
-        # next で type check が通らないので一時的にコメントアウトする
-        # https://github.com/microsoft/TypeScript/issues/61687
-        typescript: ["5.1", "5.2", "5.3", "5.4", "5.5", "5.6", "5.7", "5.8"]
+        node:
+          - "25"
+          - "24"
+          - "22"
+          - "20"
+        typescript:
+          - "5.9"
+          - "5.8"
+          - "5.7"
+          - "5.6"
+          - "5.5"
+          - "5.4"
+          - "5.3"
+          - "5.2"
+          - "5.1"
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
@@ -32,7 +42,7 @@ jobs:
       - run: pnpm run lint
       - run: pnpm run typecheck
       - run: pnpm run test
-  
+
   slack_notify_failed:
     needs: [ci]
     runs-on: ubuntu-24.04
