--- a/.github/workflows/e2e-test-webkit.yml
+++ b/.github/workflows/e2e-test-webkit.yml
@@ -19,6 +19,7 @@ jobs:
     strategy:
       matrix:
         node:
+          # Nodejs のテストではないので一番古い LTS である 20 でのみ動作確認する
           - "20"
     env:
       VITE_TEST_SIGNALING_URL: ${{ secrets.TEST_SIGNALING_URL }}
@@ -50,7 +51,6 @@ jobs:
       #     name: playwright-report
       #     path: playwright-report/
       #     retention-days: 30
-
 
   # slack_notify_succeeded:
   #   needs: [e2e-test]
