--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -21,21 +21,26 @@ jobs:
       fail-fast: false
       matrix:
         # メンテナンスはおてて
-        sdk_version: [
-            # canary リリースを含める
-            "2025.1.0",
-            "2024.2.2",
-            "2024.1.2",
-            "2023.2.0",
-            "2023.1.0",
-            "2022.3.3",
-            "2022.2.0",
-            "2022.1.0",
-            "2021.2.3",
-            # 2020.1.7 より前は E2E テストが通らない
-            "2021.1.7",
-          ]
-        node: ["20", "22", "24"]
+        sdk_version:
+          # canary リリースを含める
+          - "2025.1.0"
+          - "2024.2.2"
+          - "2024.1.2"
+          - "2023.2.0"
+          - "2023.1.0"
+          - "2022.3.3"
+          - "2022.2.0"
+          - "2022.1.0"
+          - "2021.2.3"
+          # 2020.1.7 より前は E2E テストが通らない
+          - "2021.1.7"
+        node:
+          # 30 Apr 2028 End of Life
+          - "24"
+          # 30 Apr 2027 End of Life
+          - "22"
+          # 30 Apr 2026 End of Life
+          - "20"
         browser:
           - name: "Google Chrome"
             type: "chrome"
