--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -13,8 +13,8 @@ on:
   schedule:
     # UTC 時間で毎日 2:00 (JST で 11:00) に実行、月曜日から金曜日
     # - cron: "0 2 * * 1-5"
-    # UTC 時間で平日 2-7 時 (JST で 11:00-16:00) に毎時実行
-    - cron: "0 2-7 * * 1-5"
+    # UTC 時間で平日 1-7 時 (JST で 10:00-16:00) に 30 分ごとに実行
+    - cron: "0,30 1-7 * * 1-5"
 
 jobs:
   e2e-test:
