--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -75,8 +75,8 @@ jobs:
       - run: pnpm --version
       - run: pnpm install
       - run: pnpm run build
-      - run: pnpm exec playwright install ${{ matrix.browser.type }} --with-deps
-      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
+      - run: pnpm playwright install ${{ matrix.browser.type }} --with-deps
+      - run: pnpm playwright test --project="${{ matrix.browser.name }}"
         env:
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ github.run_id }}_${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
