--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -77,8 +77,8 @@ jobs:
       - run: pnpm add -E sora-js-sdk@${{ matrix.sdk_version }}
         working-directory: ./e2e-tests
       # pnpm run build しない
-      - run: pnpm exec playwright install ${{ matrix.browser.type }} --with-deps
-      - run: pnpm exec playwright test --project="${{ matrix.browser.name }}"
+      - run: pnpm playwright install ${{ matrix.browser.type }} --with-deps
+      - run: pnpm playwright test --project="${{ matrix.browser.name }}"
         env:
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ github.run_id }}_${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
