typescript next を追加する

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ jobs:
           - "22"
           - "20"
         typescript:
+          - "next"
           - "5.9"
           - "5.8"
           - "5.7"
