--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -72,7 +72,10 @@ jobs:
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm playwright install ${{ matrix.browser.type }} --with-deps
-      - run: pnpm playwright test --project="${{ matrix.browser.name }}"
+      - run: pnpm playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/type_close.test.ts
+        env:
+          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ github.run_id }}_${{ matrix.node }}
+      - run: pnpm playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/reconnect.test.ts
         env:
           VITE_TEST_CHANNEL_ID_SUFFIX: _${{ github.run_id }}_${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
