--- a/.github/workflows/npm-pkg-e2e-test.yml
+++ b/.github/workflows/npm-pkg-e2e-test.yml
@@ -59,6 +59,7 @@ jobs:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: tag:ci
+          ping: ${{ secrets.TEST_TS_DOMAIN }}
 
       - uses: actions/setup-node@v6
         with:
