tags に切り替える

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-          # tags: ${{ secrets.TEST_TS_TAG }}
+          tags: ${{ secrets.TS_TAGS }}
           ping: ${{ secrets.TEST_TS_DOMAIN }}
           # use-cache: "false"
       - uses: actions/setup-node@v6
