--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -62,24 +62,25 @@ jobs:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: ${{ secrets.TS_TAGS }}
-          ping: ${{ secrets.TEST_TS_DOMAIN }}
+          ping: raspberrypi.tail095d0.ts.net
+          # ping: ${{ secrets.TEST_TS_DOMAIN }}
           # use-cache: "false"
-      - uses: actions/setup-node@v6
-        with:
-          node-version: ${{ matrix.node }}
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-      - run: pnpm --version
-      - run: pnpm install
-      - run: pnpm run build
-      - run: pnpm playwright install ${{ matrix.browser.type }} --with-deps
-      - run: pnpm playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/type_close.test.ts
-        env:
-          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ github.run_id }}_${{ matrix.node }}
-      - run: pnpm playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/reconnect.test.ts
-        env:
-          VITE_TEST_CHANNEL_ID_SUFFIX: _${{ github.run_id }}_${{ matrix.node }}
+      # - uses: actions/setup-node@v6
+      #   with:
+      #     node-version: ${{ matrix.node }}
+      # - uses: pnpm/action-setup@v4
+      #   with:
+      #     version: 10
+      # - run: pnpm --version
+      # - run: pnpm install
+      # - run: pnpm run build
+      # - run: pnpm playwright install ${{ matrix.browser.type }} --with-deps
+      # - run: pnpm playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/type_close.test.ts
+      #   env:
+      #     VITE_TEST_CHANNEL_ID_SUFFIX: _${{ github.run_id }}_${{ matrix.node }}
+      # - run: pnpm playwright test --project="${{ matrix.browser.name }}" e2e-tests/tests/reconnect.test.ts
+      #   env:
+      #     VITE_TEST_CHANNEL_ID_SUFFIX: _${{ github.run_id }}_${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
