ping の設定を変更し、バージョンを latest に更新する

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -62,10 +62,9 @@ jobs:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: ${{ secrets.TS_TAGS }}
-          ping: raspberrypi.tail095d0.ts.net
-          # ping: ${{ secrets.TEST_TS_DOMAIN }}
+          ping: ${{ secrets.TEST_TS_DOMAIN }}
           # use-cache: "false"
-          version: 1.90.9
+          version: latest
       # - uses: actions/setup-node@v6
       #   with:
       #     node-version: ${{ matrix.node }}
