--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -62,8 +62,9 @@ jobs:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: ${{ secrets.TS_TAGS }}
-          ping: ${{ secrets.TEST_TS_DOMAIN }}
-          # use-cache: "false"
+          # ping: ${{ secrets.TEST_TS_DOMAIN }}
+          ping: g3-plus.tail095d0.ts.net
+          use-cache: "true"
           version: latest
       # - uses: actions/setup-node@v6
       #   with:
