tailscale を一時的に無効にする

--- a/.github/workflows/e2e-test-canary.yml
+++ b/.github/workflows/e2e-test-canary.yml
@@ -38,16 +38,16 @@ jobs:
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v6
-      - uses: tailscale/github-action@v4
-        with:
-          oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-          oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-          tags: tag:ci
-          version: latest
-          use-cache: "true"
-          hostname: gha-${{ github.run_id }}-${{ github.run_number }}
-          timeout: 2m
-          retry: 5
+      # - uses: tailscale/github-action@v4
+      #   with:
+      #     oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
+      #     oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
+      #     tags: tag:ci
+      #     version: latest
+      #     use-cache: "true"
+      #     hostname: gha-${{ github.run_id }}-${{ github.run_number }}
+      #     timeout: 2m
+      #     retry: 5
       - uses: Homebrew/actions/setup-homebrew@master
       - run: brew install --cask ${{ matrix.browser.type}}
       - uses: actions/setup-node@v6
