--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -57,16 +57,16 @@ jobs:
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v6
-      - uses: tailscale/github-action@v4
-        with:
-          oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-          oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-          tags: tag:ci
-          version: latest
-          use-cache: "true"
-          hostname: gha-${{ github.run_id }}-${{ github.run_number }}
-          timeout: 2m
-          retry: 5
+      # - uses: tailscale/github-action@v4
+      #   with:
+      #     oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
+      #     oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
+      #     tags: tag:ci
+      #     version: latest
+      #     use-cache: "true"
+      #     hostname: gha-${{ github.run_id }}-${{ github.run_number }}
+      #     timeout: 2m
+      #     retry: 5
       - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node }}
